; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_color-fast.c_cmyk_to_gray.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_color-fast.c_cmyk_to_gray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, float*, float*)* @cmyk_to_gray to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmyk_to_gray(i32* %0, i32* %1, float* %2, float* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca float*, align 8
  %8 = alloca float*, align 8
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store float* %2, float** %7, align 8
  store float* %3, float** %8, align 8
  %12 = load float*, float** %7, align 8
  %13 = getelementptr inbounds float, float* %12, i64 0
  %14 = load float, float* %13, align 4
  %15 = fmul float %14, 0x3FD3333340000000
  store float %15, float* %9, align 4
  %16 = load float*, float** %7, align 8
  %17 = getelementptr inbounds float, float* %16, i64 1
  %18 = load float, float* %17, align 4
  %19 = fmul float %18, 0x3FE2E147A0000000
  store float %19, float* %10, align 4
  %20 = load float*, float** %7, align 8
  %21 = getelementptr inbounds float, float* %20, i64 2
  %22 = load float, float* %21, align 4
  %23 = fmul float %22, 0x3FBC28F5C0000000
  store float %23, float* %11, align 4
  %24 = load float, float* %9, align 4
  %25 = load float, float* %10, align 4
  %26 = fadd float %24, %25
  %27 = load float, float* %11, align 4
  %28 = fadd float %26, %27
  %29 = load float*, float** %7, align 8
  %30 = getelementptr inbounds float, float* %29, i64 3
  %31 = load float, float* %30, align 4
  %32 = fadd float %28, %31
  %33 = call i32 @fz_min(float %32, i32 1)
  %34 = sub nsw i32 1, %33
  %35 = sitofp i32 %34 to float
  %36 = load float*, float** %8, align 8
  %37 = getelementptr inbounds float, float* %36, i64 0
  store float %35, float* %37, align 4
  ret void
}

declare dso_local i32 @fz_min(float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
